# obdManipulator

./: CMakeLists.txt  Connectivity.cpp  Connectivity.h  CurrentData.cpp  CurrentData.h  DataTranslator.cpp  DataTranslator.h  DtcHandler.cpp  DtcHandler.h  Utils.cpp  Utils.h  VechicleInfoHandler.cpp  VechicleInfoHandler.h  main.cpp
tests/: .ConnectivityMock.cpp.swp  .tests.cpp.swp  ConnectivityMock.cpp  tests.cpp
tests/connectivityTest/: connectivityTest.cpp
